fix: text of song is out of container

--- a/src/App.scss
+++ b/src/App.scss
@@ -126,6 +126,7 @@ button {
 
 .bodySingleSong {
   padding: 30px;
+  overflow: auto;
 
   pre span.chords {
     font-size: 18px;
