--- a/src/components/common/Menu/Menu.module.scss
+++ b/src/components/common/Menu/Menu.module.scss
@@ -111,7 +111,7 @@
   border-bottom: 1px solid #bb86fc;
 }
 
-@media (min-width: 920px) {
+@media (min-width: 921px) {
   .menu__icon {
     display: none;
   }
@@ -121,5 +121,12 @@
     .menu {
       box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.8);
     }
+  }
+}
+
+@media (max-width: 920px) {
+  .svgButton:hover {
+    background: inherit;
+    box-shadow: inherit;
   }
 }
